// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "vəː gɪg ɹiːð vəː gʊdh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "vəː dɔːgs siː vəː gʊdhs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "vəː gɪg gɔːgɪŋz æt vəː ɹɪvəːɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "vəː gɪg nat ɹiːð vəː gʊdh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ɾebe βidt dubuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "gaːgaːde βidnt dudubuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego do tuam",
    },
    {
      "english": "the king walks at the river",
      "target": "ɾebe aːmbudt hdume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ɾebe non βidt dubuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ʂɯɯlɯkəl foːwel lukin",
    },
    {
      "english": "the dogs see the wolves",
      "target": "foːwel foːwel lukin",
    },
    {
      "english": "i give you the bread",
      "target": "mi sin kəl",
    },
    {
      "english": "the king walks at the river",
      "target": "ʂɯɯlɯkəl fək hoːhɯl kəw",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ʂɯɯlɯkəl foːwel al lukin",
    },
  ],
  "preset": "tokipona",
}
`;
